[package]
name = "dingtalk-stream-sdk-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
futures = "0.3.30"
log = "0.4.20"
native-tls = "0.2.11"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls-vendored"] }
tokio = { version = "1", features = [] }
serde_json = "1.0.111"
async-broadcast = "0.6.0"
strum = { version = "0.25.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
env_logger = "0.11.0"
