[package]
edition = "2021"
name = "dingtalk-stream-sdk-rust"
version = "0.1.0"
description = "An **UNOFFICIAL** Rust SDK focused on the development of DingTalk robots."
license = "Apache-2.0"
homepage = "https://github.com/avalon1610/dingtalk-stream-sdk-rust"
repository = "https://github.com/avalon1610/dingtalk-stream-sdk-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-broadcast = "0.6.0"
bytes = "1.5.0"
chrono = {version = "0.4.33", default-features = false, features = ["clock"]}
clap = {version = "4.4.18", features = ["derive"]}
futures = "0.3.30"
log = "0.4.20"
dingtalk-stream-sdk-rust-macro = {path = "./macro", version = "0.1"}
native-tls = "0.2.11"
reqwest = {version = "0.11.23", features = ["json", "stream", "multipart"]}
serde = {version = "1.0.195", features = ["derive"]}
serde_json = "1.0.111"
strum = {version = "0.26.1", features = ["derive"]}
tokio = {version = "1", features = ["macros"]}
tokio-tungstenite = {version = "0.21.0", features = ["native-tls-vendored"]}
tokio-util = {version = "0.7.10", features = ["io"]}

[dev-dependencies]
env_logger = "0.11.0"
indoc = "2.0.4"
rand = "0.8.5"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
