[package]
name = "dingtalk-stream-sdk-rust-macro"
version = "0.1.0"
edition = "2021"
description = "Proc Macro crate for dingtalk-stream-sdk-rust"
license = "Apache-2.0"
homepage = "https://github.com/avalon1610/dingtalk-stream-sdk-rust"
repository = "https://github.com/avalon1610/dingtalk-stream-sdk-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
